--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "eslint-config-next": "^12.2.2",
     "jest": "^28.1.2",
     "jest-environment-jsdom": "^28.1.3",
+    "jest-fetch-mock": "^3.0.3",
     "json-graphql-server": "^2.3.1",
     "typescript": "^5.0.4"
   }
