--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ node_modules
 # next.js
 .next
 out
+.swc
 
 # production
 build
@@ -30,3 +31,6 @@ yarn-error.log*
 
 # vercel
 .vercel
+
+#github
+.github
